# HARP

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  NEWS  README  README.md  autogen.sh  cli.html  configure.ac  dev.html  genindex.html  index.html  install.html  intro.html  objects.inv  parallel_data.html  parallel_extract.html  parallel_utils.html  search.html  searchindex.js  serial_data.html  serial_extract.html  serial_utils.html
docs/: harp.dox  (+2 more)
instruments/boss/: Makefile.am  configure.m4  harp_boss.hpp  harp_boss_image.cpp  harp_boss_psf.cpp  harp_boss_spectrum.cpp  harp_spec_boss_specter.cpp
instruments/boss/tests/: Makefile.am  test_boss.com  test_boss.cpp  test_boss.hpp
instruments/sandbox/: Makefile.am  configure.m4  harp_image_sandbox.cpp  harp_image_sandbox_sim.cpp  harp_psf_sandbox.cpp  harp_sandbox.hpp  harp_sandbox_image.cpp  harp_sandbox_psf.cpp  harp_sandbox_spec.cpp  harp_spec_sandbox.cpp
instruments/sandbox/tests/: Makefile.am  test_sandbox.com  test_sandbox.cpp  test_sandbox.hpp  test_sandbox_sky.cpp
src/apps/: Makefile.am  harp_example_imgstack.cpp  harp_extract.cpp  harp_results.py.in  harp_slice_psf.py.in  harp_slice_spec.py.in  harp_specstract.cpp  harp_spectract.cpp  harp_validate.cpp
src/apps-mpi/: Makefile.am  harp_mpi_desi.cpp  harp_mpi_extract.cpp  harp_skytruth.py.in  harp_slice_psf.py.in
src/libharp/: Makefile.am  gen_harpconfig.sh  harp.cpp  harp.hpp  harp_eigen.cpp  harp_extract.cpp  harp_extraction.cpp  harp_fits.cpp  harp_image.cpp  harp_image_fits.cpp  harp_image_sim.cpp  harp_internal.hpp  harp_matrix.cpp  harp_metadata.cpp  harp_psf.cpp  harp_psf_gauss.cpp  harp_psf_gauss_sim.cpp  harp_psf_gh.cpp  harp_serialization.hpp  harp_serialization.hpp.in  harp_sky.cpp  harp_spec.cpp  harp_spec_sim.cpp  harp_spec_slice.cpp  harp_spec_specter.cpp  harp_spectra.cpp  harp_spectrum.cpp  harpconfig.in
src/libharp-mpi/: Makefile.am  harp_mpi.cpp  harp_mpi.hpp  harp_mpi_extraction.cpp  harp_mpi_fits.cpp  harp_mpi_image.cpp  harp_mpi_internal.hpp  harp_mpi_matrix.cpp  harp_mpi_metadata.cpp  harp_mpi_psf.cpp  harp_mpi_sky.cpp  harp_mpi_spec.cpp  harp_mpi_spec_slice.cpp  harp_mpi_targets.cpp
src/libharp-mpi/harp/: extraction.hpp  fits.hpp  image.hpp  metadata.hpp  mpi_extraction.hpp  mpi_fits.hpp  mpi_image.hpp  mpi_metadata.hpp  mpi_plugin.hpp  mpi_psf.hpp  mpi_spec.hpp  mpi_spec_slice.hpp  mpi_targets.hpp  psf.hpp  spec.hpp
src/libharp-mpi/math/: Makefile.am  harp_mpi_linalg.cpp  harp_mpi_math.cpp  harp_mpi_math_internal.hpp
src/libharp-mpi/plugins/: Makefile.am
src/libharp/data/: Makefile.am  harp_data.cpp  harp_data_internal.hpp  harp_fits.cpp  harp_image.cpp  harp_metadata.cpp  harp_plugin_registry.cpp  harp_psf.cpp  harp_spec.cpp  harp_targets.cpp
src/libharp/extract/: Makefile.am  harp_extraction.cpp  harp_spec_slice.cpp
src/libharp/formats/: formats.am  harp_formats_image.hpp  harp_formats_psf.hpp  harp_formats_spec.hpp  harp_image_fits.cpp  harp_image_sim.cpp  harp_psf_gauss.cpp  harp_psf_gauss_sim.cpp  harp_psf_gh.cpp  harp_spec_sim.cpp  harp_spec_specter.cpp
src/libharp/harp/: eigen.hpp  extract.hpp  extraction.hpp  fits.hpp  formats_image.hpp  formats_psf.hpp  formats_spec.hpp  image.hpp  matrix.hpp  metadata.hpp  psf.hpp  sky.hpp  spec.hpp  spec_slice.hpp  spectra.hpp  spectrum.hpp
src/libharp/math/: Makefile.am  boost_epa.txt  harp_linalg.cpp  harp_math.cpp  harp_math_internal.hpp
src/libharp/matrix/: CholeskyDecomposition.cpp  EigenvalueDecomposition.cpp  LUDecomposition.cpp  Makefile.am  QRDecomposition.cpp
src/libharp/plugin/: Makefile.am  formats_image.hpp  harp_plugin_image_fits.cpp  harp_plugin_image_sim.cpp  harp_plugin_psf_gauss.cpp  harp_plugin_psf_gauss_sim.cpp  harp_plugin_psf_gh.cpp  harp_plugin_spec_sim.cpp  harp_plugin_spec_specter.cpp  internal_image_plugins.hpp  internal_psf_plugins.hpp  internal_spec_plugins.hpp
src/libharp/plugins/: Makefile.am  harp_plugin_image_desi.cpp  harp_plugin_image_fits.cpp  harp_plugin_image_sim.cpp  harp_plugin_psf_gauss.cpp  harp_plugin_psf_gauss_sim.cpp  harp_plugin_psf_gh.cpp  harp_plugin_psf_pyspecter.cpp  harp_plugin_spec_desi.cpp  harp_plugin_spec_desisim.cpp  harp_plugin_spec_fits.cpp  harp_plugin_spec_sim.cpp  harp_plugin_spec_specter.cpp  harp_plugin_targets_desi.cpp  harp_plugin_targets_fits.cpp  harp_plugin_targets_sim.cpp  internal_image_plugins.hpp  internal_psf_plugins.hpp  internal_spec_plugins.hpp  internal_targets_plugins.hpp
src/plugins/: Makefile.am  harp_plugin_image_fits.cpp  harp_plugin_psf_gauss.cpp  harp_plugin_psf_gauss_sim.cpp  harp_plugin_psf_gh.cpp  harp_plugin_spec_sim.cpp  harp_plugin_spec_specter.cpp  internal_image_plugins.hpp  internal_psf_plugins.hpp  internal_spec_plugins.hpp
src/plugins-mpi/: Makefile.am
src/plugins/harp/: static_plugins.hpp.in
src/python/: Makefile.am  __init__.py  gen_python.sh
src/python/boost_numpy/: Makefile.am
src/tests/: Makefile.am  harp_test.cpp  harp_test.hpp  harp_test_desi.cpp  harp_test_eigen.cpp  harp_test_elemental.cpp  harp_test_extract.cpp  harp_test_image_fits.cpp  harp_test_image_sim.cpp  harp_test_image_simfits.cpp  harp_test_invcov.cpp  harp_test_lapack.cpp  harp_test_linalg.cpp  harp_test_psf_gauss.cpp  harp_test_psf_gauss_sim.cpp  harp_test_serialize.cpp  harp_test_serialize.hpp  harp_test_sim_extract.cpp  harp_test_sky_extract.cpp  harp_test_small_extract.cpp  harp_test_spec_sim.cpp  harp_test_spec_simspecter.cpp  harp_test_spec_specter.cpp  harp_test_specslice.cpp  harp_test_tinyKLT.cpp
src/tests-mpi/: Makefile.am  harp_mpi_test.cpp  harp_mpi_test.hpp  harp_mpi_test_extract.cpp  harp_mpi_test_linalg.cpp  harp_mpi_test_spec.cpp  harp_mpi_test_specslice.cpp  harp_test.hpp  harp_test_elemental.cpp  harp_test_invcov.cpp  harp_test_psf_gauss.cpp  harp_test_sim_extract.cpp  harp_test_sky_extract.cpp  harp_test_small_extract.cpp  harp_test_spec_sim.cpp  harp_test_spec_specter.cpp  harp_test_tinyKLT.cpp
src/tests-mpi/testdata/: plot.py  spectrogram.py  test_medium_psf.fits.bz2  (+1 more)
src/tests-python/: Makefile.am  harp_test_python.cpp  harp_test_python_module.py
(+108 files in other folders)
