
if BUILD_BOSS
AM_CPPFLAGS += -I$(top_srcdir)/instruments/boss
noinst_HEADERS += $(top_srcdir)/instruments/boss/harp_boss.hpp
libharp_la_SOURCES += \
	$(top_srcdir)/instruments/boss/harp_boss_image.cpp \
	$(top_srcdir)/instruments/boss/harp_boss_spectrum.cpp \
	$(top_srcdir)/instruments/boss/harp_boss_psf.cpp
endif

