
if BUILD_SANDBOX
AM_CPPFLAGS += -I$(top_srcdir)/instruments/sandbox
noinst_HEADERS += $(top_srcdir)/instruments/sandbox/harp_sandbox.hpp
libharp_la_SOURCES += \
	$(top_srcdir)/instruments/sandbox/harp_sandbox_image.cpp \
	$(top_srcdir)/instruments/sandbox/harp_sandbox_spec.cpp \
	$(top_srcdir)/instruments/sandbox/harp_sandbox_psf.cpp
endif

