
if BUILD_SANDBOX

AM_CPPFLAGS += -I$(top_srcdir)/instruments/sandbox

noinst_HEADERS += $(top_srcdir)/instruments/sandbox/harp_sandbox.hpp

libharp_la_SOURCES += \
	$(top_srcdir)/instruments/sandbox/harp_image_sandbox.cpp \
	$(top_srcdir)/instruments/sandbox/harp_spec_sandbox.cpp \
	$(top_srcdir)/instruments/sandbox/harp_psf_sandbox.cpp

endif

